# SIPP

./: Cargo.toml  MIT-LICENSE.txt  README.md
src/: lib.rs  prover.rs  prover_native.rs  starky_prover.rs  statements.rs  transcript.rs  transcript_circuit.rs  transcript_native.rs  utils.rs  verifier.rs  verifier_circuit.rs  verifier_native.rs  verifier_witness.rs
